--- a/QLgac/packages.config
+++ b/QLgac/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
   <package id="Fody" version="4.0.2" targetFramework="net472" developmentDependency="true" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
+  <package id="FontAwesome.Sharp" version="6.1.1" targetFramework="net472" />
   <package id="Guna.UI2.WinForms" version="2.0.3.5" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry.AccessControl" version="6.0.0" targetFramework="net472" />
