--- a/QLgac/QLgac.csproj
+++ b/QLgac/QLgac.csproj
@@ -55,6 +55,12 @@
     <Reference Include="DevExpress.XtraBars.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraEditors.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraGrid.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="FontAwesome.Sharp, Version=6.1.1.0, Culture=neutral, PublicKeyToken=d16d1e4e568ec10f, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.6.1.1\lib\net472\FontAwesome.Sharp.dll</HintPath>
     </Reference>
@@ -154,6 +160,7 @@
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Remoting" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Security.AccessControl, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.AccessControl.6.0.0\lib\net461\System.Security.AccessControl.dll</HintPath>
@@ -240,7 +247,24 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS\DaiDoiBUS.cs" />
     <Compile Include="Conection.cs" />
+    <Compile Include="DAO\DaiDoiDAO.cs" />
+    <Compile Include="DAO\DataProvider.cs" />
+    <Compile Include="DTO\DAIDOI.cs" />
+    <Compile Include="DTO\DAMNHIEMGAC.cs" />
+    <Compile Include="DTO\DANGNHAP.cs" />
+    <Compile Include="DTO\HOCVIEN.cs" />
+    <Compile Include="DTO\KIEMTRA.cs" />
+    <Compile Include="DTO\LICHGAC.cs" />
+    <Compile Include="DTO\Model1.cs" />
+    <Compile Include="DTO\NGUOIKIEMTRA.cs" />
+    <Compile Include="DTO\QUYDINH.cs" />
+    <Compile Include="DTO\SUVIEC.cs" />
+    <Compile Include="DTO\TIEUDOAN.cs" />
+    <Compile Include="DTO\VATCHAT.cs" />
+    <Compile Include="DTO\VIPHAM.cs" />
+    <Compile Include="DTO\VONGGAC.cs" />
     <Compile Include="Encrypt.cs" />
     <Compile Include="Home.cs">
       <SubType>Form</SubType>
